2001-06-03  Jody Goldberg <jgoldberg@home.com>

	* src/cellspan.c (cell_calc_span) : do not span expressions
	  because they do not span when recalculated.  This will be fixed when
	  just in time rendering is done.

2001-06-03  Jody Goldberg <jgoldberg@home.com>
	From Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* rendered-value.c (rendered_value_get_text): Add a check for
	  rendered value != NULL.
	(cell_get_rendered_text): Add check for redered value == NULL

2001-06-03  Jody Goldberg <jgoldberg@home.com>

	* src/workbook.c (workbook_expr_relocate) : flag all sheets as needing
	  status updates.

2001-06-03  Zbigniew Chyla  <cyba@gnome.pl>

	Updating i/o progress while saving Gnumeric XML file.

	* src/xml-io.c
	s/N_ELEMENTS_BETWEEN_UPDATES/N_INPUT_ELEMENTS_BETWEEN_UPDATES
	(xml_write_cell_and_position): Update i/o progress every
	N_OUTPUT_ELEMENTS_BETWEEN_UPDATES cells.
	(xml_write_styles): Ditto for styles.
	(gnumeric_xml_read_workbook): Better error reporting.
	(workbook_get_n_elements): Internal function, calculating the number of
	"elements" (styles and cells) in workbook.
	(gnumeric_xml_write_workbook): Split saving to three stages: building
	XML tree, dumping it to memory buffer, saving (compressed) buffer
	contents to file. Update i/o progress regularly.
	The second stage still freezes UI though :(

2001-06-03  Zbigniew Chyla  <cyba@gnome.pl>

	* src/func.c (function_def_get_full_info_if_needed): Protected against
	stack overflow. Probably it doesn't really solve the problem though :(

2001-06-03  Jody Goldberg <jgoldberg@home.com>

	* src/cell-draw.c (draw_text) : limit length of cell text to avoid
	  flakey X servers that crash with long strings.

	* src/clipboard.c (clipboard_paste_region) : be sure to rerender and
	  span if formats change.

	* src/format.c (format_value) : simplify.

2001-06-03  Almer S. Tigelaar  <almer@gnome.org>

	* src/stf.c (stf_write_workbook): Exporting wouldn't work
	because of wrong changes to the code. Fixed.